# Dynamic-Carto-SLAM

./: .gitignore  README.md
experiments/: README.md
experiments/static_v2/: commands.md  inputs.md  outputs.md  results.md
ros2_ws/src/dynamic_carto_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/dynamic_carto_demo/config/: kiss_icp_tb3_warehouse.yaml  record_qos_overrides.yaml  scan_filter_params.yaml  tb3_warehouse_lds_2d_common.lua  tb3_warehouse_lds_2d_localization.lua  tb3_warehouse_lds_2d_mapping.lua  tb3_wheel_kiss_ekf.yaml  tb3_wheel_kiss_ekf_tuned.yaml  tb3_wheel_kiss_ekf_tuned_v2.yaml
ros2_ws/src/dynamic_carto_demo/dynamic_carto_demo/: bag_pose_to_tum.py  gazebo_ground_truth_node.py  laserscan_to_pointcloud2_node.py  odom_child_frame_fix_node.py  odom_noisy_node.py  odom_to_tf_node.py  world_odom_bridge_node.py
ros2_ws/src/dynamic_carto_demo/launch/: kiss_icp_bag_pipeline.launch.py  kiss_icp_ekf_bag_pipeline.launch.py  offline_localization.launch.py  offline_localization_filtered.launch.py  offline_localization_fused.launch.py  offline_mapping.launch.py  tb3_carto_mapping_rviz_only.launch.py  tb3_gazebo_industrial_warehouse.launch.py  tb3_warehouse.launch.py
ros2_ws/src/dynamic_carto_demo/models/turtlebot3_waffle/: model.sdf
ros2_ws/src/dynamic_carto_demo/models/walking_person_proxy/: model.config  model.sdf
ros2_ws/src/dynamic_carto_demo/worlds/: industrial_warehouse_classic.world  industrial_warehouse_classic_actor_with_proxy.world
ros2_ws/src/gazebo_actor_proxy_follower/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_actor_proxy_follower/src/: actor_proxy_follower.cpp
ros2_ws/src/scan_filter/: package.xml
scripts/: plot_ape_comparison.py  plot_ape_static_v2.py
