<?xml version="1.0"?>
<package format="3">
  <name>gazebo_actor_proxy_follower</name>
  <version>0.1.0</version>
  <description>Gazebo Classic world plugin to make a collision proxy follow an animated actor.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>libgazebo-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

